<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:layout_width="match_parent"
		      android:layout_height="match_parent"
		      android:paddingLeft="@dimen/padding_horizontal"
		      android:paddingRight="@dimen/padding_horizontal"
		      android:paddingTop="20dp"
		      android:paddingBottom="10dp"
		      android:orientation="vertical"
		      android:background="@drawable/stage" >
	<TextView android:layout_width="match_parent"
	    	  android:layout_height="wrap_content"
	    	  android:layout_marginBottom="120dp"
	    	  android:alpha="0.7"
	    	  android:gravity="right"
	    	  android:textColor="@android:color/white"
	    	  android:text="@string/empty" />
	<EditText  android:id="@+id/username"
	    	   android:layout_width="match_parent"
	    	   android:layout_height="wrap_content"
	    	   android:padding="12dp"
	    	   android:background="@android:color/white"
	    	   android:singleLine="true"
	    	   android:inputType="textPersonName"
	    	   android:hint="@string/username"
	    	   android:minWidth="120dp"
	    	   android:maxWidth="260dp" />
	<View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#E3E3E3" /> 
	<EditText  android:id="@+id/password"
	    	   android:layout_width="match_parent"
	    	   android:layout_height="wrap_content"
	    	   android:padding="12dp"	    	   
	    	   android:background="@android:color/white"
	    	   android:singleLine="true"
	    	   android:inputType="textPassword"
	    	   android:hint="@string/password"
	    	   android:minWidth="120dp"
	    	   android:maxWidth="260dp" />
	<EditText  android:id="@+id/email"
	    	   android:layout_width="match_parent"
	    	   android:layout_height="wrap_content"
	    	   android:padding="12dp"	    	   
	    	   android:background="@android:color/white"
	    	   android:singleLine="true"
	    	   android:inputType="textEmailAddress"
	    	   android:hint="@string/email"
	    	   android:minWidth="120dp"
	    	   android:maxWidth="260dp" />
	<Button android:id="@+id/btn_signup"
	    	android:layout_width="match_parent"
	    	android:layout_height="50dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_marginBottom="30dp"
	    	android:background="@drawable/btn_signup_bg_selector"
	    	android:onClick="signup"
	    	android:textColor="@color/signup_button_text"
	    	android:text="@string/signup" />	
	<Button android:id="@+id/btn_cancel"
	    	android:layout_width="match_parent"
	    	android:layout_height="50dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_marginBottom="30dp"
	    	android:background="@drawable/btn_login_bg_selector"
	    	android:onClick="toLoginPage"	    	
	    	android:textColor="@color/login_button_text"
	    	android:text="@string/cancel" />	    	
</LinearLayout>