<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/feed_container"
	android:layout_width="match_parent"
	android:layout_height="96dp"
	android:background="@drawable/list_item"
	android:orientation="horizontal" >

	<View android:layout_width="3dp"
		android:layout_height="match_parent"
		android:background="@color/dark_accent"
		android:layout_marginBottom="10dp"/>

	<LinearLayout android:id="@+id/item_abstract"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_margin="10dp"
		android:weightSum="3"
		android:orientation="vertical"
        android:layout_marginBottom="10dp">

		<TextView
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="12dp"
			android:ellipsize="end"
			android:fontFamily="sans-serif-light"
			android:gravity="center|left"
			android:maxLines="2"
			android:text="@string/name"
			android:textColor="@color/primary_text"
			android:textSize="18sp"
			/>

		<LinearLayout android:id="@+id/footer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:weightSum="3"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/author_name"
				android:layout_width="0dip"
				android:layout_height="16dp"
				android:layout_weight="1.2"
				android:fontFamily="sans-serif-light"
				android:gravity="center|left"
				android:text="@string/author"
				android:textColor="@color/primary_text"
				android:textSize="12sp" />

			<View android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.8" />
			<TextView android:id="@+id/more"
				android:layout_width="0dip"
				android:layout_height="16dp"
				android:layout_marginRight="6dp"
				android:gravity="center|right"
				android:layout_weight="1"
				android:text="@string/more"
				android:textColor="@color/dark_accent"
				android:textSize="14sp" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
